--- a/simplegallery/build.gradle
+++ b/simplegallery/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile "com.android.support:appcompat-v7:25.1.0"
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation "com.android.support:exifinterface:25.1.0"
 }
 
 /*apply plugin: 'maven'
