--- a/simplegallery/build.gradle
+++ b/simplegallery/build.gradle
@@ -20,8 +20,8 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:25.1.0"
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation "com.android.support:appcompat-v7:25.1.0"
+    api 'com.github.bumptech.glide:glide:3.7.0'
     implementation "com.android.support:exifinterface:25.1.0"
 }
 
