--- a/simplegallery/build.gradle
+++ b/simplegallery/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     //buildToolsVersion "21.1.2"
 
     defaultConfig {
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:25.1.0"
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
     api 'com.github.bumptech.glide:glide:3.7.0'
-    implementation "com.android.support:exifinterface:25.1.0"
+    implementation "com.android.support:exifinterface:${rootProject.ext.supportLibraryVersion}"
 }
 
 /*apply plugin: 'maven'
