--- a/simplegallery/build.gradle
+++ b/simplegallery/build.gradle
@@ -20,9 +20,9 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
+    implementation "androidx.appcompat:appcompat:1.0.0"
     api 'com.github.bumptech.glide:glide:3.7.0'
-    implementation "com.android.support:exifinterface:${rootProject.ext.supportLibraryVersion}"
+    implementation "androidx.exifinterface:exifinterface:1.0.0"
 }
 
 /*apply plugin: 'maven'
